--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,7 @@
+pages_build_output_dir = "dist"
+
 [build]
 command = "npm run build"
-output_directory = "dist"
 
 [build.environment]
 NODE_VERSION = "18"
